hphp/test/zend/good/ext/libxml/tests/001.php.skipif
<?php if (!extension_loaded('libxml')) die('skip'); ?>