hphp/test/zend/bad/ext/pdo_sqlite/tests/bug_63916.php.skipif
<?php
if (!extension_loaded('pdo_sqlite')) die('skip');
if (PHP_INT_SIZE < 8) die('skip');
?>